--- a/Day01/ex01/Makefile
+++ b/Day01/ex01/Makefile
@@ -6,18 +6,21 @@
 #    By: mbarra <mbarra@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/06/01 22:49:36 by mbarra            #+#    #+#              #
-#    Updated: 2022/06/01 22:52:52 by mbarra           ###   ########.fr        #
+#    Updated: 2022/06/01 23:01:55 by mbarra           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = phonebook\
+NAME = phonebook \
 
-SRC = contact.cpp phonebook.cpp\
+HEADER = contact.hpp phonebook.hpp \
 
-OBJ=$(patsubst %.cpp, %.o, $(SRC))\
+SRC = contact.cpp phonebook.cpp \
 
-CC = c++\
-RM = rm -f\
+OBJ	= $(SRC:%.cpp=%.o) \
+
+CC = c++ \
+
+RM = rm -f \
 
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 
@@ -26,7 +29,7 @@ CFLAGS = -Wall -Wextra -Werror -std=c++98
 
 all: $(NAME)
 
-$(NAME): $(OBJ)
+$(NAME): $(OBJ) $(HEADER)
 	$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
 
 clean:
