--- a/Day02/ex00/Makefile
+++ b/Day02/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: mbarra <mbarra@student.21-school.ru>       +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/06/08 21:25:33 by mbarra            #+#    #+#              #
+#    Updated: 2022/06/08 21:25:33 by mbarra           ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = zombie \
 
 HEADER = Zombie.hpp \
