--- a/cpp00/ex02/Makefile
+++ b/cpp00/ex02/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mbarra <mbarra@student.42.fr>              +#+  +:+       +#+         #
+#    By: mbarra <mbarra@student.21-school.ru>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/06/01 22:49:36 by mbarra            #+#    #+#              #
-#    Updated: 2022/06/05 20:55:11 by mbarra           ###   ########.fr        #
+#    Updated: 2022/06/16 21:26:17 by mbarra           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
