--- a/cpp03/ex02/Makefile
+++ b/cpp03/ex02/Makefile
@@ -6,11 +6,11 @@
 #    By: mbarra <mbarra@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/07/07 21:14:47 by mbarra            #+#    #+#              #
-#    Updated: 2022/07/09 18:50:21 by mbarra           ###   ########.fr        #
+#    Updated: 2022/07/09 20:43:43 by mbarra           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME			=		ex00
+NAME			=		ex02
 
 HDR				=		$(wildcard $(HDR_DIR)/*.hpp)
 
@@ -24,7 +24,7 @@ OBJ				=		$(patsubst %.cpp, %.o, $(SRC))
 
 CC				=		c++
 RM				=		rm -f
-CFLAGS			=		-std=c++98 -Wall -Wextra -Werror
+CFLAGS			=		-std=c++98 #-Wall -Wextra -Werror
 
 %.o: %.cpp
 	$(CC) $(CFLAGS) -c $< -o $@
