--- a/cpp04/ex02/Makefile
+++ b/cpp04/ex02/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mbarra <mbarra@student.42.fr>              +#+  +:+       +#+         #
+#    By: mbarra <mbarra@student.21-school.ru>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/07/07 21:14:47 by mbarra            #+#    #+#              #
-#    Updated: 2022/07/10 21:34:29 by mbarra           ###   ########.fr        #
+#    Updated: 2022/07/25 22:50:49 by mbarra           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
